[package]
name = "rtiow"
version = "1.0.0"
authors = ["okaneco <47607823+okaneco@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Rust implementation of Raytracing in One Weekend."

[features]
default = [
    "threads",
]

# enable threading support
threads = ["rayon"]

[dependencies.rand]
version = "0.7"
default-features = false
features = ["std"]

[dependencies.rayon]
version = "1"
default-features = false
optional = true

[profile.release]
lto = "thin"
