[package]
name = "rtiow"
version = "2.0.0"
authors = ["okaneco <47607823+okaneco@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Rust implementation of Raytracing in One Weekend and Raytracing the Next Week."

[features]
default = [
    "images",
    "threads",
]

# Support for opening and writing images
images = ["image"]

# Enable threading support
threads = ["rayon"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg"]
optional = true

[dependencies.rand]
version = "0.7"
default-features = false
features = ["std"]

[dependencies.rand_chacha]
version = "0.2"
default-features = false

[dependencies.rayon]
version = "1"
default-features = false
optional = true

[profile.release]
lto = "thin"
